fix width query on mobile: add viewport meta tag
Without a viewport meta tag, the max-width media query would not
activate properly. Adding it enables proper mobile rendering.

Also tweak the CSS correspondingly:
- Change .blog-container from viewport to character based
- Add horizontal padding

--- a/static/main.css
+++ b/static/main.css
@@ -88,15 +88,15 @@ header menu {
     justify-content: center;
     align-items: left;
     flex-direction: column;
-    max-width: 40vw;
+    max-width: 70ch;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 2rem;
+    padding: 2rem 1.5rem;
 }
 @media (max-width: 768px) {
     .blog-container {
-        /* FIXME: shouldn't be only 40% on mobile, but this does not work */
-        max-width: 100vw;
+        max-width: 100%;
+        padding: 2rem 1.25rem;
     }
 }
 
